[metadata]
name = plover_agnostic_toggle
version = 0.0.1
description = Adds a universal retrospective toggle macro to Plover
long_description = file: README.rst
author = Max Helmisaari
author_email = maxhel95@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = N/A
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_agnostic_toggle

[options.entry_points]
plover.macro =
	toggle_key = plover_agnostic_toggle:toggle_key
	stroke_negative = plover_agnostic_toggle:stroke_negative

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
